<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/current_loc"
        android:title="@string/current_location"
        app:showAsAction="never" />

    <item
        android:id="@+id/london"
        android:title="@string/london"
        app:showAsAction="never" />

    <item
        android:id="@+id/newyork"
        android:title="@string/newyork"
        app:showAsAction="never" />

    <item
        android:id="@+id/sydney"
        android:title="@string/sydney"
        app:showAsAction="never" />

    <item
        android:id="@+id/kolkata"
        android:title="@string/kolkata"
        app:showAsAction="never" />

    <item
        android:id="@+id/bangalore"
        android:title="@string/bangalore"
        app:showAsAction="never" />
</menu>